// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrosswindInputForm · viewport snapshots (G2 picker) iPad 11" landscape (1194x834, isRegular) — runway row renders the picker 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 24,
          "justifyContent": "space-between",
        },
        {
          "flex": 1,
        },
      ]
    }
    testID="form"
  >
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 12,
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "600",
              "letterSpacing": 1,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Aircraft
      </Text>
      <View
        accessibilityLabel="Aircraft"
        accessibilityRole="radiogroup"
        style={
          {
            "backgroundColor": "#11161F",
            "borderColor": "rgba(255, 255, 255, 0.08)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "column",
            "gap": 4,
            "padding": 3,
          }
        }
        testID="crosswind-aircraft"
      >
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 2,
            }
          }
        >
          <View
            accessibilityLabel="B787-8"
            accessibilityRole="radio"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 4,
                  "flex": 1,
                  "justifyContent": "center",
                  "minHeight": 66,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                {
                  "backgroundColor": "#00C2A8",
                },
                null,
              ]
            }
            testID="crosswind-aircraft-b787_8"
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#001A17",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "textAlign": "center",
                  },
                  {
                    "fontWeight": "500",
                  },
                ]
              }
            >
              B787-8
            </Text>
          </View>
          <View
            accessibilityLabel="B787-9"
            accessibilityRole="radio"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 4,
                  "flex": 1,
                  "justifyContent": "center",
                  "minHeight": 66,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                null,
                null,
              ]
            }
            testID="crosswind-aircraft-b787_9"
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#8B949E",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "textAlign": "center",
                  },
                  {
                    "fontWeight": "500",
                  },
                ]
              }
            >
              B787-9
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 12,
        }
      }
      testID="crosswind-weight"
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "600",
              "letterSpacing": 1,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        TOW actual
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(0, 194, 168, 0.2)",
            "borderRadius": 14,
            "padding": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "borderRadius": 12,
              "borderWidth": 1,
              "flexDirection": "row",
              "minHeight": 80,
              "opacity": 1,
              "paddingHorizontal": 28,
              "paddingVertical": 20,
            }
          }
        >
          <TextInput
            accessibilityLabel="TOW actual"
            autoComplete="off"
            autoCorrect={false}
            caretHidden={true}
            editable={false}
            inputMode="decimal"
            keyboardType="decimal-pad"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="e.g. 170"
            placeholderTextColor="#6E7681"
            pointerEvents="none"
            returnKeyType="done"
            showSoftInputOnFocus={false}
            spellCheck={false}
            style={
              {
                "color": "#E6EDF3",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 36,
              }
            }
            testID="crosswind-weight-input"
            textContentType="none"
            value=""
          />
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            t
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "justifyContent": "flex-start",
            "minHeight": 24,
          }
        }
        testID="crosswind-weight-error-slot"
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 12,
        }
      }
      testID="crosswind-cg"
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "600",
              "letterSpacing": 1,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Center of gravity
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(0, 194, 168, 0.2)",
            "borderRadius": 14,
            "padding": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "borderRadius": 12,
              "borderWidth": 1,
              "flexDirection": "row",
              "minHeight": 80,
              "opacity": 1,
              "paddingHorizontal": 28,
              "paddingVertical": 20,
            }
          }
        >
          <TextInput
            accessibilityLabel="Center of gravity"
            autoComplete="off"
            autoCorrect={false}
            caretHidden={true}
            editable={false}
            inputMode="decimal"
            keyboardType="decimal-pad"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="e.g. 25.5"
            placeholderTextColor="#6E7681"
            pointerEvents="none"
            returnKeyType="done"
            showSoftInputOnFocus={false}
            spellCheck={false}
            style={
              {
                "color": "#E6EDF3",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 36,
              }
            }
            testID="crosswind-cg-input"
            textContentType="none"
            value=""
          />
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            %MAC
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "justifyContent": "flex-start",
            "minHeight": 24,
          }
        }
        testID="crosswind-cg-error-slot"
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 12,
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "600",
              "letterSpacing": 1,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Runway condition
      </Text>
      <View
        accessibilityLabel="Runway condition"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": false,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": "Dry",
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            {
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "minHeight": 72,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            },
          ]
        }
        testID="crosswind-runway"
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "color": "#E6EDF3",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
                "textAlign": "auto",
              },
              {
                "fontWeight": "500",
              },
            ]
          }
        >
          Dry
        </Text>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#8B949E",
                "fontSize": 22,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
          testID="crosswind-runway-chevron"
        >
          
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`CrosswindInputForm · viewport snapshots (G2 picker) iPad 11" portrait (834x1194, isRegular) — runway row renders the picker 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 24,
          "justifyContent": "space-between",
        },
        {
          "flex": 1,
        },
      ]
    }
    testID="form"
  >
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 12,
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "600",
              "letterSpacing": 1,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Aircraft
      </Text>
      <View
        accessibilityLabel="Aircraft"
        accessibilityRole="radiogroup"
        style={
          {
            "backgroundColor": "#11161F",
            "borderColor": "rgba(255, 255, 255, 0.08)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "column",
            "gap": 4,
            "padding": 3,
          }
        }
        testID="crosswind-aircraft"
      >
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 2,
            }
          }
        >
          <View
            accessibilityLabel="B787-8"
            accessibilityRole="radio"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 4,
                  "flex": 1,
                  "justifyContent": "center",
                  "minHeight": 66,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                {
                  "backgroundColor": "#00C2A8",
                },
                null,
              ]
            }
            testID="crosswind-aircraft-b787_8"
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#001A17",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "textAlign": "center",
                  },
                  {
                    "fontWeight": "500",
                  },
                ]
              }
            >
              B787-8
            </Text>
          </View>
          <View
            accessibilityLabel="B787-9"
            accessibilityRole="radio"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 4,
                  "flex": 1,
                  "justifyContent": "center",
                  "minHeight": 66,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                null,
                null,
              ]
            }
            testID="crosswind-aircraft-b787_9"
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#8B949E",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "textAlign": "center",
                  },
                  {
                    "fontWeight": "500",
                  },
                ]
              }
            >
              B787-9
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 12,
        }
      }
      testID="crosswind-weight"
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "600",
              "letterSpacing": 1,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        TOW actual
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(0, 194, 168, 0.2)",
            "borderRadius": 14,
            "padding": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "borderRadius": 12,
              "borderWidth": 1,
              "flexDirection": "row",
              "minHeight": 80,
              "opacity": 1,
              "paddingHorizontal": 28,
              "paddingVertical": 20,
            }
          }
        >
          <TextInput
            accessibilityLabel="TOW actual"
            autoComplete="off"
            autoCorrect={false}
            caretHidden={true}
            editable={false}
            inputMode="decimal"
            keyboardType="decimal-pad"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="e.g. 170"
            placeholderTextColor="#6E7681"
            pointerEvents="none"
            returnKeyType="done"
            showSoftInputOnFocus={false}
            spellCheck={false}
            style={
              {
                "color": "#E6EDF3",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 36,
              }
            }
            testID="crosswind-weight-input"
            textContentType="none"
            value=""
          />
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            t
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "justifyContent": "flex-start",
            "minHeight": 24,
          }
        }
        testID="crosswind-weight-error-slot"
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 12,
        }
      }
      testID="crosswind-cg"
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "600",
              "letterSpacing": 1,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Center of gravity
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(0, 194, 168, 0.2)",
            "borderRadius": 14,
            "padding": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "borderRadius": 12,
              "borderWidth": 1,
              "flexDirection": "row",
              "minHeight": 80,
              "opacity": 1,
              "paddingHorizontal": 28,
              "paddingVertical": 20,
            }
          }
        >
          <TextInput
            accessibilityLabel="Center of gravity"
            autoComplete="off"
            autoCorrect={false}
            caretHidden={true}
            editable={false}
            inputMode="decimal"
            keyboardType="decimal-pad"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="e.g. 25.5"
            placeholderTextColor="#6E7681"
            pointerEvents="none"
            returnKeyType="done"
            showSoftInputOnFocus={false}
            spellCheck={false}
            style={
              {
                "color": "#E6EDF3",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 36,
              }
            }
            testID="crosswind-cg-input"
            textContentType="none"
            value=""
          />
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            %MAC
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "justifyContent": "flex-start",
            "minHeight": 24,
          }
        }
        testID="crosswind-cg-error-slot"
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 12,
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "auto",
            },
            {
              "fontWeight": "600",
              "letterSpacing": 1,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Runway condition
      </Text>
      <View
        accessibilityLabel="Runway condition"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": false,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": "Dry",
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            {
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "minHeight": 72,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            },
          ]
        }
        testID="crosswind-runway"
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "color": "#E6EDF3",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
                "textAlign": "auto",
              },
              {
                "fontWeight": "500",
              },
            ]
          }
        >
          Dry
        </Text>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#8B949E",
                "fontSize": 22,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
          testID="crosswind-runway-chevron"
        >
          
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`CrosswindInputForm · viewport snapshots (G2 picker) iPhone compact (393x852) — runway row renders the picker 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 16,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
    testID="form"
  >
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 4,
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "600",
              "letterSpacing": 0.6,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        Aircraft
      </Text>
      <View
        accessibilityLabel="Aircraft"
        accessibilityRole="radiogroup"
        style={
          {
            "backgroundColor": "#11161F",
            "borderColor": "rgba(255, 255, 255, 0.08)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "column",
            "gap": 4,
            "padding": 3,
          }
        }
        testID="crosswind-aircraft"
      >
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 2,
            }
          }
        >
          <View
            accessibilityLabel="B787-8"
            accessibilityRole="radio"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 4,
                  "flex": 1,
                  "justifyContent": "center",
                  "minHeight": 38,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                {
                  "backgroundColor": "#00C2A8",
                },
                null,
              ]
            }
            testID="crosswind-aircraft-b787_8"
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#001A17",
                    "fontFamily": "System",
                    "fontSize": 10,
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 14,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              B787-8
            </Text>
          </View>
          <View
            accessibilityLabel="B787-9"
            accessibilityRole="radio"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 4,
                  "flex": 1,
                  "justifyContent": "center",
                  "minHeight": 38,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                null,
                null,
              ]
            }
            testID="crosswind-aircraft-b787_9"
          >
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#8B949E",
                    "fontFamily": "System",
                    "fontSize": 10,
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 14,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              B787-9
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 4,
        }
      }
      testID="crosswind-weight"
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 9,
              "fontWeight": "600",
              "letterSpacing": 0.54,
              "lineHeight": 12,
              "textAlign": "auto",
            },
            {
              "textTransform": "uppercase",
            },
          ]
        }
      >
        TOW actual
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(0, 194, 168, 0.2)",
            "borderRadius": 10,
            "padding": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            }
          }
        >
          <TextInput
            accessibilityLabel="TOW actual"
            autoComplete="off"
            autoCorrect={false}
            caretHidden={true}
            editable={false}
            inputMode="decimal"
            keyboardType="decimal-pad"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="e.g. 170"
            placeholderTextColor="#6E7681"
            pointerEvents="none"
            returnKeyType="done"
            showSoftInputOnFocus={false}
            spellCheck={false}
            style={
              {
                "color": "#E6EDF3",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 16,
              }
            }
            testID="crosswind-weight-input"
            textContentType="none"
            value=""
          />
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "Menlo",
                  "fontSize": 11,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 16,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            t
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "justifyContent": "flex-start",
            "minHeight": 20,
          }
        }
        testID="crosswind-weight-error-slot"
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 4,
        }
      }
      testID="crosswind-cg"
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 9,
              "fontWeight": "600",
              "letterSpacing": 0.54,
              "lineHeight": 12,
              "textAlign": "auto",
            },
            {
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Center of gravity
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(0, 194, 168, 0.2)",
            "borderRadius": 10,
            "padding": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            }
          }
        >
          <TextInput
            accessibilityLabel="Center of gravity"
            autoComplete="off"
            autoCorrect={false}
            caretHidden={true}
            editable={false}
            inputMode="decimal"
            keyboardType="decimal-pad"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="e.g. 25.5"
            placeholderTextColor="#6E7681"
            pointerEvents="none"
            returnKeyType="done"
            showSoftInputOnFocus={false}
            spellCheck={false}
            style={
              {
                "color": "#E6EDF3",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 16,
              }
            }
            testID="crosswind-cg-input"
            textContentType="none"
            value=""
          />
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "Menlo",
                  "fontSize": 11,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 16,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            %MAC
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "justifyContent": "flex-start",
            "minHeight": 20,
          }
        }
        testID="crosswind-cg-error-slot"
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 4,
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "600",
              "letterSpacing": 0.6,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        Runway condition
      </Text>
      <View
        accessibilityLabel="Runway condition"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": false,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": "Dry",
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            {
              "backgroundColor": "#11161F",
              "borderColor": "rgba(255, 255, 255, 0.08)",
              "minHeight": 44,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
          ]
        }
        testID="crosswind-runway"
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "color": "#E6EDF3",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
                "textAlign": "auto",
              },
              undefined,
            ]
          }
        >
          Dry
        </Text>
        <Text />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
